# ZazaNotes

./: .editorconfig  .gitignore  README.md  ZazaMVC.sln  docker-compose.yml  requirements.txt
Zaza/: Zaza.sln  dockerfile
Zaza.Bot/: requirements.txt
Zaza.Web/: .editorconfig  .gitignore  AuthOptions.cs  AuthRouteManager.cs  Program.cs  RouteManager.cs  StaticStuff.cs  Zaza.Web.csproj  Zaza.Web.http  Zaza.Web.sln  docker-compose.yml  dockerfile
Zaza.Web/DataBase/: EntityDefines.cs  MongoService.cs
Zaza.Web/Exceptions/: EnitityNotFoundException.cs  UserNotFoundException.cs
Zaza.Web/Properties/: launchSettings.json
Zaza.Web/StorageInterfaces/: INoteRepository.cs  IUserRepository.cs
Zaza.Web/Stuff/: ArgNames.cs  ArgumentManager.cs  AuthOptions.cs  DTODefines.cs  EntityDefines.cs  State.cs  StaticStuff.cs  TokenService.cs
Zaza/Tests/: UnitTest1.cs  Zaza.Web.Tests.csproj  bebra.runsettings
Zaza/Web/: Program.cs  RouteManager.cs  (+5 more)
ZazaBot/: .gitignore  Dockerfile  configuration.py  example.env  main.py  pyproject.toml
ZazaBot/src/: TelegramBot.py
ZazaBot/src/api/: NoteAPI.py  UserAPI.py
ZazaBot/src/data/: NoteData.py  UserData.py
ZazaBot/src/filters/: NoteFilter.py  UserFilter.py
ZazaBot/src/handlers/: callbacks.py  commands.py  messages.py
ZazaBot/src/kb/: inl_kb.py
ZazaBot/src/middleware/: AntiFlood.py  AuthUser.py
ZazaBot/src/others/: config_for_bot.py  profile-set-info.py  profile_set_info.py
ZazaBot/src/states/: NotesState.py  UserState.py
ZazaBot/src/utils/: __init__.py  text.py
ZazaBot/src/utils/additionally/: add_commands.py
(+49 files in other folders)
